--- a/views/index.html
+++ b/views/index.html
@@ -44,12 +44,12 @@
 
     #problem-title {
       font-size: 24px;
-      color: #003cba;
+      color: #34b3ff;
       font-weight: 700;
     }
 
     .btn {
-      background: #0066ff;
+      background: #34b3ff;
       color: white;
       border: none;
       padding: 10px 18px;
@@ -59,12 +59,12 @@
     }
 
     .btn:hover {
-      background: #004ad8;
+      background: #34b3ff;
     }
 
     .problem-level {
       background: #0066ff20;
-      color: #004ad8;
+      color: #34b3ff;
       font-weight: 600;
       padding: 5px 10px;
       border-radius: 8px;
@@ -86,7 +86,7 @@
     }
 
     #submit-box h3 {
-      color: #004ad8;
+      color: #46fe5c;
       margin-bottom: 15px;
       font-size: 18px;
     }
@@ -101,7 +101,7 @@
 
     #submitBtn {
       margin-left: 10px;
-      background: #0055ff;
+      background: #f89f3a;
       border: none;
       color: white;
       padding: 10px 16px;
