--- a/views/index.html
+++ b/views/index.html
@@ -158,7 +158,7 @@
 
       <div id="submit-box">
         <h3>플래그 제출</h3>
-        <input type="text" id="flagInput" placeholder="Sunrin{flag_here}" />
+        <input type="text" id="flagInput" placeholder="NL{flag_here}" />
         <button id="submitBtn">제출</button>
         <div id="result-message"></div>
       </div>
